--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <script>
-         var defaultLocale = "es";
-         var validLocales = ["ca", "en", "es"]
+         var defaultLocale = "en";
+         var validLocales = ["ca", "es", "en"]
          var getFirstBrowserLanguage = function () {
 
     // internal purpose only
