--- a/ca/index.html
+++ b/ca/index.html
@@ -73,7 +73,7 @@
                         <div class="site-heading">
                             <h1 style="text-transform: capitalize">el bloc desxifrat</h1>
                             <hr class="small">
-                            <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                            <span class="subheading">un bloc sobre programació i traducció</span>
                         </div>
                     </div>
                 </div>
