--- a/en/index.html
+++ b/en/index.html
@@ -73,7 +73,7 @@
                         <div class="site-heading">
                             <h1 style="text-transform: capitalize">the decoded blog</h1>
                             <hr class="small">
-                            <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                            <span class="subheading">a blog about coding and translation</span>
                         </div>
                     </div>
                 </div>
