--- a/es/index.html
+++ b/es/index.html
@@ -73,7 +73,7 @@
                         <div class="site-heading">
                             <h1 style="text-transform: capitalize">el blog descifrado</h1>
                             <hr class="small">
-                            <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                            <span class="subheading">un blog sobre programación y traducción</span>
                         </div>
                     </div>
                 </div>
